# poetry-arbitrary-version-plugin

./: README.md  pyproject.toml
.github/workflows/: build.yml  release.yml
poetry_arbitrary_version_plugin/: plugin.py
