[tool.poetry]
name = "poetry-arbitrary-version-plugin"
version = "0.9.0"
description = "A Poetry plugin to override a version in a pyproject.toml from environment variable or build and publish command option"
authors = ["Michal Nowikowski <godfryd@gmail.com>"]
license = "APACHE 2.0"
readme = "README.md"
packages = [{include = "poetry_arbitrary_version_plugin"}]
homepage = "https://github.com/godfryd/poetry-arbitrary-version-plugin"
repository = "https://github.com/godfryd/poetry-arbitrary-version-plugin"
keywords = ["poetry", "poetry-plugin", "plugin", "version", "arbitrary-version"]
classifiers = [
    "Topic :: Software Development",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = ">=3.7,<4"
poetry = ">=1.2.0a1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."poetry.application.plugin"]
poetry-arbitrary-version-plugin = "poetry_arbitrary_version_plugin.plugin:ArbitraryVersionPlugin"
